LPD-34183 com.liferay.ide.server.core: adds opens to the JDK_JAVA_OPTIONS environment variable